[package]
name = "dm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


build = "build.rs"

[dependencies]
# once_cell = "1"
[dependencies.windows]
version = "0.48"
features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_Foundation",
    # "Win32_System_LibraryLoader",
    # "Win32_Globalization"
]

[build-dependencies]
cc = "1"
# libloading = "0.8"
[features]
default = ["keymap", "reg"]
keymap = []
reg = []